[gd_scene load_steps=9 format=2]

[ext_resource path="res://Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pause.gd" type="Script" id=4]
[ext_resource path="res://Fonts/CapitalisTypOasis.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[node name="Main" type="Node"]

[node name="Room" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.59662, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause Menu" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 26.0
margin_bottom = 21.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Pause Menu"]
margin_left = 2.0
margin_right = 1283.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Pause Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -220.144
margin_right = 135.0
margin_bottom = -159.144
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnPause" type="Button" parent="CanvasLayer/Pause Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.325
margin_top = -53.8553
margin_right = 172.675
margin_bottom = -16.8553
custom_fonts/font = SubResource( 2 )
text = "RETURN TO GAME"

[node name="MainMenu" type="Button" parent="CanvasLayer/Pause Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -6.02747
margin_right = 121.0
margin_bottom = 30.9725
custom_fonts/font = SubResource( 3 )
text = "GO TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CanvasLayer/Pause Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = 40.9004
margin_right = 107.5
margin_bottom = 77.9004
custom_fonts/font = SubResource( 4 )
text = "QUIT GAME"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Pause Menu/Panel/UnPause" to="CanvasLayer/Pause Menu" method="_on_UnPause_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/Panel/MainMenu" to="CanvasLayer/Pause Menu" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/Panel/Quit" to="CanvasLayer/Pause Menu" method="_on_Quit_pressed"]
